[gd_scene load_steps=13 format=2]

[ext_resource path="res://Resources/Textures/Items/Laser.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Items/Laser.gd" type="Script" id=2]
[ext_resource path="res://Scripts/FX/LaserParticleEffect.gd" type="Script" id=3]
[ext_resource path="res://Resources/Textures/Environment/background.png" type="Texture" id=4]
[ext_resource path="res://Resources/Textures/FX/Light.png" type="Texture" id=5]
[ext_resource path="res://Resources/Audio/FX/Unmaker2.wav" type="AudioStream" id=6]
[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 40.1352 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.789773 ), 0.0, 0.0, 0, 0, Vector2( 0.782609, 0.607955 ), 0.0, 0.0, 0, 0, Vector2( 0.983696, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 180.0
gravity = Vector3( -400, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 400.0
scale = 30.17
scale_random = 1.0
scale_curve = SubResource( 5 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 5, -0.0333333, 159.167, -11.6333, 147.5, 11.3 )

[node name="Laser" type="Area2D"]
scale = Vector2( 1.2, 0.1 )
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )
max_fade_in_width = 45
fade_out_speed = 400.0
fade_in_speed = 300.0

[node name="Background" type="Sprite" parent="."]
visible = false
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 0.313726 )
position = Vector2( 554.453, -6.56668 )
scale = Vector2( 28.05, 6.42 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -321, 0 )
rotation = 1.5708
scale = Vector2( 0.05, 7.99796 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -360.019, 0.049941 )
rotation = 4.71239
scale = Vector2( 0.0755809, 3.27275 )
texture = ExtResource( 1 )

[node name="FadeOutTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="NotFadingTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="FadeInTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="LaserParticleEffect" type="Particles2D" parent="."]
position = Vector2( -3, 0 )
scale = Vector2( 1, 0.033 )
amount = 50
speed_scale = 3.0
randomness = 0.21
process_material = SubResource( 2 )
script = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 3
position = Vector2( -365.416, 0.133334 )
scale = Vector2( 1.72445, -0.0174479 )
texture = ExtResource( 5 )
energy = 2.0
shadow_enabled = true
shadow_gradient_length = 5.0
shadow_item_cull_mask = 3

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 2
occluder = SubResource( 3 )
light_mask = 2

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 6.118
pitch_scale = 1.23
autoplay = true
script = ExtResource( 7 )
default_vol = 8.0

[connection signal="timeout" from="FadeOutTimer" to="." method="_on_FadeOutTimer_timeout"]
[connection signal="timeout" from="NotFadingTimer" to="." method="_on_NotFadingTimer_timeout"]
[connection signal="timeout" from="FadeInTimer" to="." method="_on_FadeInTimer_timeout"]
